--- a/codigo/index.html
+++ b/codigo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, culpa sed quod, aperiam ad nihil iusto nesciunt id illo dolor, nisi laboriosam magnam. Dolores quam tenetur, impedit unde eius labore?</p>  
 </body>
 </html>
