--- a/codigo/index.html
+++ b/codigo/index.html
@@ -1,39 +1,39 @@
-<! DOCTYPE html >
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width = device-width, initial-scale = 1.0 "/>
-    <link  rel="stylesheet "href="./style.css "/>
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0 "/>
+    <link rel="stylesheet "href="./style.css" />
     <title>Controle de despesas</title>
   </head>
     <body>
         <h2> CONTROLE DE DESPESAS </h2>
-        <div class=" container ">
-           <h4> Saldo atual </h4>
-           <h1 id="balance" class=" balance "> R$ 0,00 </h1>
-           <div class=" inc-exp-container ">
+        <div class="container">
+           <h4>Saldo atual</h4>
+           <h1 id="balance" class="balance"> R$ 0,00 </h1>
+           <div class="inc-exp-container">
                 <div>
                     <h4> Receitas </h4>
-                    <p id=" money-plus " class=" money plus "> + R$ 0,00 </p>
+                    <p id="money-plus" class="money plus"> + R$ 0,00 </p>
                 </div>
 
                  <div>
-                   <h4> Despesas </h4>
-                   <p id=" money-minus " class=" money minus " > - R$ 0,00 </p>
+                   <h4>Despesas</h4>
+                   <p id="money-minus" class="money minus">- R$ 0,00</p>
                  </div>
             </div>
 
                 <h3>Transações</h3>
             
-                <ul id="transações" class="transações">
-                 <!-<li class="minus"> Salário 
-                     <span>- $400 </span> 
-                 <button class="delete-btn"> x </button>
-                  </li> ->
+                <ul id="transactions" class="transactions">
+                    <!--<li class="minus">
+                    Salário <span>-$400</span><button class="delete-btn">x</button>
+                    </li>-->
                 </ul>
 
-                    <h3> Adicionar transação </h3 >
-                  <form id="form">
+                <h3> Adicionar transação</h3 >
+
+                    <form id="form">
                     <div class="form-control">
                     <label for="text">Nome</label>
                     <input autofocus type="text" id="text" placeholder="Nome da transação"/>
@@ -41,15 +41,15 @@
 
                 <div class="form-control"> 
                     <label for="amount"> Valor <br/>
-                    <small>(negativo - despesas, positivo - receitas)</small>
+                          <small>(negativo - despesas, positivo - receitas)</small>
                     </label>
                     <input type="number" id="amount" placeholder="Valor da transação" />
                 </div>
+
                 <button class="btn"> Adicionar </button>
              </form>
             </div>
 
-         <script src="script.js"> </script>
+         <script src="script.js"></script>
     </body>
-
 </html>
